<resources>
    <string name="app_name">Фуд Шоп</string>
    <!--Start-->
    <string name="goLogin">Вже є аккаунт? Вхід</string>
    <string name="goSignUp">Приєднатися</string>

    <!--Sign Up-->
    <string name="nameSignUp">Як до Вас звертатися?</string>
    <string name="phoneSignUp">Як Вам зателефонувати?</string>
    <string name="emailSignUp">Почта</string>
    <string name="passwordSignUp">Пароль</string>
    <string name="signUp">Реєстрація</string>
    <string name="errorBadEmail">Така почта не існує</string>
    <string name="errorWeakPassword">Слабкий пароль</string>
    <string name="errorUserExist">Ви вже зареєстровані</string>

    <!--Sign In-->
    <string name="signIn">Вхід</string>
    <string name="emailSignIn">Почта</string>
    <string name="passwordSignIn">Пароль</string>
    <string name="rememberMeSignIn">Запамятати</string>
    <string name="notExistAc">Немає аккаунту? Не проблема</string>
    <string name="error">Помилка</string>
    <string name="errorEmpty">Заповніть поля</string>
    <string name="errorFirebase">Невірна почта або пароль</string>

    <!--PageNames-->
    <string name="home">Головна</string>
    <string name="catalog">Каталог</string>
    <string name="favourite">Списки</string>
    <string name="account">Акк</string>

    <!--Account Page-->
    <string name="nameCaptionAcc">Привіт</string>
    <string name="phoneCaptionAcc">Телефон</string>
    <string name="emailCaptionAcc">Почта</string>
    <string name="signOutAccount">Вийти</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>