<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/home">

    <fragment
        android:id="@+id/home"
        android:name="com.example.bunshop.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/catalog"
        android:name="com.example.bunshop.CatalogFragment"
        android:label="@string/catalog"
        tools:layout="@layout/fragment_catalog" />
    <fragment
        android:id="@+id/favourites"
        android:name="com.example.bunshop.FavouritesFragment"
        android:label="@string/favourite"
        tools:layout="@layout/fragment_favourites" />
    <fragment
        android:id="@+id/account"
        android:name="com.example.bunshop.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account" />
</navigation>